Replaces the deprecated use of the `new Float(float)` constructor with a call to the static `Float.valueOf(float)` method. There was also one case where it made sense to call `Float.parseFloat(String)` instead of the `new Float(String)` constructor.
AbstractOptions.java
GameOptions.java
Options.java
PreferenceStore.java
GameOptionsTest.java