@@ -200,7 +200,7 @@ public abstract class AbstractOptions implements IOptions, Serializable {
 
     protected void addOption(IBasicOptionGroup group, String name,
             float defaultValue) {
-        addOption(group, name, IOption.FLOAT, new Float(defaultValue));
+        addOption(group, name, IOption.FLOAT, Float.valueOf(defaultValue));
     }
 
     protected void addOption(IBasicOptionGroup group, String name, Vector<String> defaultValue) {
