@@ -48,7 +48,7 @@ public class Option implements IOption, Serializable {
     }
 
     public Option(IOptions owner, String name, float defaultValue) {
-        this(owner, name, FLOAT, new Float(defaultValue));
+        this(owner, name, FLOAT, Float.valueOf(defaultValue));
     }
 
     public Option(IOptions owner, String name, Vector<String> defaultValue) {
